--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item me-5">
-                        <a class="nav-link" href="product.html">Product</a>
+                        <a class="nav-link" href="/Page/product.html">Product</a>
                     </li>
                     <li class="nav-item me-5">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="/Page/contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item me-5">
-                        <a class="nav-link" href="product.html" tabindex="-1" aria-disabled="true"><i class="bi bi-cart4"></i>Buy Now</a>
+                        <a class="nav-link" href="/Page/product.html" tabindex="-1" aria-disabled="true"><i class="bi bi-cart4"></i>Buy Now</a>
                     </li>
                 </ul>
             </div>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="mt-4 d-flex justify-content-center">
-                    <a href="product.html" class="btn btn-warning btn-lg text-light">Beli Sekarang</a>
+                    <a href="/Page/product.html" class="btn btn-warning btn-lg text-light">Beli Sekarang</a>
                 </div>
             </div>
         </div>
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="mt-5 d-flex justify-content-center">
-                <a href="product.html" class="btn btn-warning btn-lg text-light">Lihat Lainnya</a>
+                <a href="/Page/product.html" class="btn btn-warning btn-lg text-light">Lihat Lainnya</a>
             </div>
         </div>
     </div>
